--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h2>Генератор паролей</h2>
         </div>
         <div class="result-container">
-            <input type="text" id="result">
+            <input type="text" readonly="readonly" id="result">
             <button class="copy-result" id="copy">
                 Копировать
             </button>
